# homepage-drawing-website

./: .gitignore  docker-compose.yml
client/: index.html  index.js
pyserver/: Dockerfile  main.py  start.sh
server/: Cargo.toml  Dockerfile  main.py
server/config/: passwords  whitelist
server/src/: client.rs  error.rs  line.rs  main.rs  rest.rs  server.rs
